Fucking_bug_report.txt
====================[ 빌드 | PLCSimulator | Debug ]===============================
D:\jetbrainTools\CLion\bin\cmake\win\x64\bin\cmake.exe --build D:\CLionProjects\PLC_Emulator\cmake-build-debug --target PLCSimulator -- -j 10
[  1%] Built target glad-generate-files
[  9%] Built target miniz
[ 21%] Built target imgui_lib
[ 46%] Built target glfw
[ 51%] Built target glad
[ 53%] Building CXX object CMakeFiles/PLCSimulator.dir/src/physics/physics_solvers.cpp.obj
[ 54%] Building CXX object CMakeFiles/PLCSimulator.dir/src/project/project_file_manager.cpp.obj
[ 56%] Building CXX object CMakeFiles/PLCSimulator.dir/src/project/openplc_compiler_integration.cpp.obj
D:\CLionProjects\PLC_Emulator\src\project\openplc_compiler_integration.cpp: In member function 'std::string plc::OpenPLCCompilerIntegration::TranslateInstruction(const LDInstruction&)':
D:\CLionProjects\PLC_Emulator\src\project\openplc_compiler_integration.cpp:451:75: error: use of old-style cast to 'int' [-Werror=old-style-cast]
  451 |       return "// Unknown instruction: " + std::to_string((int)instruction.type);
      |                                                                           ^~~~
      |                                                          -----
      |                                                          static_cast<int> (   )
cc1plus.exe: all warnings being treated as errors
mingw32-make[3]: *** [CMakeFiles\PLCSimulator.dir\build.make:514: CMakeFiles/PLCSimulator.dir/src/project/openplc_compiler_integration.cpp.obj] Error 1
mingw32-make[3]: *** Waiting for unfinished jobs....
mingw32-make[2]: *** [CMakeFiles\Makefile2:240: CMakeFiles/PLCSimulator.dir/all] Error 2
mingw32-make[1]: *** [CMakeFiles\Makefile2:247: CMakeFiles/PLCSimulator.dir/rule] Error 2
mingw32-make: *** [Makefile:181: PLCSimulator] Error 2
